# OrientationRecorder

./: README.md  settings.gradle
app/: build.gradle
app/release/: app-release.apk
app/src/androidTest/java/ua/alexanderbabansky/orientationrecorder/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native-lib.h
app/src/main/java/ua/alexanderbabansky/orientationrecorder/: AboutActivity.java  CountdownActivity.java  FirstFragment.java  MainActivity.java  PreferencesActivity.java  PreferencesFragment.java  RecordService.java  SecondFragment.java  ServiceBroadcastReceiver.java
app/src/main/res/layout/: activity_about.xml  activity_countdown.xml  activity_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/main/res/xml/: preferences.xml
app/src/test/java/ua/alexanderbabansky/orientationrecorder/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
